--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a-scene embedded arjs>
 
 			<a-marker-camera type='pattern' url='assets/pattern-Marker_SNJ.patt'>
-				<a-image src="assets/img-webar-002.png"></a-image>
+				<a-image src="img-webar-001.png"></a-image>
 			</a-marker-camera>
 
         <a-entity camera></a-entity>
