--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
 
-			<a-marker-camera type='pattern' url='assets/pattern-Marker_SNJ.patt'>
+			<a-marker preset="hiro">
 				<a-image src="img-webar-001.png"></a-image>
-			</a-marker-camera>
+			</a-marker>
 
         <a-entity camera></a-entity>
         </a-scene>
