--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <a-scene embedded arjs>
 
 			<a-marker preset="hiro">
-				<a-image src="img-webar-001.png"></a-image>
+				<a-sphere position="0 0 0" radius="1.25" color="#C17300"></a-sphere>
 			</a-marker>
 
         <a-entity camera></a-entity>
