--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
 		<!-- script de AR.JS con soporte de marker + location -->
 		<script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
 	</head>
-    <body style="margin : 0px; overflow: hidden;">
-        <a-scene embedded arjs>
-
-			<a-marker preset="hiro">
-				<a-sphere position="0 0 0" radius="1.25" color="#C17300"></a-sphere>
-			</a-marker>
-
-        <a-entity camera></a-entity>
-        </a-scene>
-    </body>
+<body style="margin : 0px; overflow: hidden;">
+<a-scene embedded arjs>
+<a-marker preset="hiro">
+<a-sphere position="0 0 0" radius="0.6" color="#EF2D5E"></a-sphere>
+</a-marker>
+<a-entity camera></a-entity>
+</a-scene>
+</body>
 </html>
