--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
 
-			<a-marker preset="hiro">
-				<a-sphere position="0 0 0" radius="1.25" color="#C17300"></a-sphere>
-			</a-marker>
+			<a-marker-camera type='pattern' url='assets/pattern-Marker_SNJ.patt'>
+				<a-image src="assets/img-webar-002.png"></a-image>
+			</a-marker-camera>
 
         <a-entity camera></a-entity>
         </a-scene>
