--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
 
-			<a-marker-camera type='pattern' url='assets/pattern-Marker_SNJ.patt'>
+			<a-marker-camera type='pattern' url='assets/pattern-Marker_SNJ.patt0'>
 				<a-image src="assets/img-webar-002.png"></a-image>
 			</a-marker-camera>
 
