--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 	</head>
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
-
-			<a-marker-camera type='pattern' patternUrl='assets/pattern-Marker_SNJ.patt'>
-				<a-image src="assets/img-webar-002.png"></a-image>
-			</a-marker-camera>
-
+			<a-marker preset="hiro">
+				<a-text value="SAN JUANITO!"></a-text>
+			</a-marker>
         <a-entity camera></a-entity>
         </a-scene>
     </body>
