--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body style="margin : 0px; overflow: hidden;">
         <a-scene embedded arjs>
 			<a-marker preset="hiro">
-				<a-text value="SAN JUANITO!"></a-text>
+				<a-sphere position="0 0 0" radius="0.6" color="#154376"></a-sphere>
 			</a-marker>
         <a-entity camera></a-entity>
         </a-scene>
